Fixes Menu color on mobile

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -14,7 +14,7 @@
 
 @media only screen and (max-width: 768px) {
     .navbar {
-        background-color: #4285F4;
+        background-color: #45526e;
     }
 }
 html,
